--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Building Your Skill Set.</h3>
+              <p>Practicing your drawing for half an hour each day over the course of a month will help you develop your own artistic style and get you used to the rhythm of creative work..</p> 
             </div>
           </li>
 
