--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Get An Education.</h3>
+              <p>Getting an education will give you the bona fides you need to impress potential clients and employers..</p>
 
               <!--
 This block contains a photo and has a caption.
@@ -140,8 +140,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Getting the Necessary Tools.</h3>
+              <p>Graphic design is a technology-intensive field. At the professional level, many jobs depend on having the right set of computer skills..</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
@@ -152,16 +152,16 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Purchase software.</h3>
+              <p>Graphic design software can make your job easier, and allow you to quickly accomplish tasks that would otherwise take much longer. While you will probably develop a liking for one particular program, it is best to be familiar with several..</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Making a Name for Yourself.</h3>
+              <p>Join design organizations.[5] There are many graphic design organizations at both local and national levels that host webinars, conferences, and other events where their members can ask questions and learn new techniques..</p> 
             </div>
           </li>
 
