--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Add your introduction to your step-by-step-guide, including a title, time requir
               <b>Effectiveness Rating:</b> 100% Effective</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>Are you wondering how to get into Graphic Design? Then this is the right place to look!</p>
 
           </div>
 
@@ -95,12 +95,12 @@ Add your Things You'll Need.
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>Bottle</li>
-              <li>Cardboard</li>
-              <li>Hand pump (bicycle)</li>
-              <li>Cork (vintage wines)</li>
-              <li>Duct Tape</li>
-              <li>Water</li>
+              <li>A sketchbook</li>
+              <li>Suitable computer</li>
+              <li>Graphic design programs</li>
+              <li>Education</li>
+              <li>Being able to put yourself out there</li>
+              <li>Love for graphic design</li>
             </ul>
           </aside>
         </div>
