--- a/index.html
+++ b/index.html
@@ -297,15 +297,15 @@ Customise the visual style and appearance of your guide.
         padding: 7px 10px 5px 25px;
         list-style-type: square;
         list-style-position: inside;
-        color:#333;
+        color:#D1FAE9;
       }
 
       .content {
-        background: #fff;          /* CHANGE THE INSTRUCTION BACKGROUND COLOR HERE */
+        background: #D1FAE9;          /* CHANGE THE INSTRUCTION BACKGROUND COLOR HERE */
       }
 
       .step-by-step li:before {
-        background: #D3E3E8;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
+        background: #D1FAE9;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
         border-top-left-radius: 50px;          /* CHANGE THE INSTRUCTION SHAPE HERE */
         border-bottom-left-radius: 50px;
       }
