--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ Customise the visual style and appearance of your guide.
         padding: 7px 10px 5px 25px;
         list-style-type: square;
         list-style-position: inside;
-        color:#FF9885;
+        color:#000000;
       }
 
       .content {
@@ -350,7 +350,7 @@ Customise the visual style and appearance of your guide.
 
       /* Hover state styles for list items inside unordered list <li> */
       ul li:hover {
-        background-color: #eedc9c;
+        background-color: #FF9885;
       }
 
 
