--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
               <a href="https://www.flickr.com/photos/premium_custom_brick/8085618347/" title="Graphic Designer wanted, on Flickr"><img alt="2006-04-22 Graphic Designer Wanted" height="%" width="%" src="http://https://live.staticflickr.com/8464/8085618347_e71105859a_z.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <p class="caption">Graphic Designer wanted.</p>
             </div>
           </li>
 
