--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 
     <footer>
       <p>The original how-to appeared in <a href="https://www.wikihow.com/Get-Into-Graphic-Design" title="How to get into Graphic Design: 5 Steps - wikiHow">WikiHow</a>.</p>
-      <p>Images are by <a href="https://flic.kr/p/djuUCT" title="Graphic Design™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
+      <p>Images are by <a href="https://live.staticflickr.com/8464/8085618347_fbdf49ff88_o.png" title="Graphic Design™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
     </footer>
 
     <!--
